import {
  Column,
  CreateDateColumn,
  Entity,
  JoinColumn,
  ManyToOne,
  OneToMany,
  PrimaryGeneratedColumn,
} from 'typeorm';
import { Quiz } from './quiz.entity';
import { QuestionOption } from './question-option.entity';
import { LearnerAnswer } from './learner-answer.entity';
import { IsString, MaxLength, MinLength } from 'class-validator';

export class QuestionConstraints {
  static readonly TITLE_MIN_LENGTH = 2;
  static readonly TITLE_MAX_LENGTH = 200;
}

@Entity('questions')
export class Question {
  @PrimaryGeneratedColumn()
  id: number;

  @Column({ type: 'varchar', length: 200 })
  @IsString()
  @MinLength(2)
  @MaxLength(200)
  title: string;

  @Column({ type: 'text', nullable: true })
  explanation?: string;

  @ManyToOne(() => Quiz, (quiz) => quiz.questions, {
    onDelete: 'CASCADE',
  })
  @JoinColumn({ name: 'quiz_id' })
  quiz: Quiz;

  @OneToMany(() => QuestionOption, (option) => option.question, {
    eager: true,
    cascade: ['insert'],
  })
  options: QuestionOption[];

  @OneToMany(() => LearnerAnswer, (learnerAnswer) => learnerAnswer.question)
  learnerAnswers: LearnerAnswer[];

  @CreateDateColumn({ name: 'created_at' })
  createdAt: Date;
}
